# tonic-clap

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI.yml
apps/ctr/: Cargo.toml
apps/ctr/src/: cmd.rs  main.rs
apps/ctr/src/included/: mod.rs
apps/ctr/src/included/containerd/: mod.rs
apps/ctr/src/included/containerd/services/: containers.rs  content.rs  diff.rs  events.rs  images.rs  introspection.rs  leases.rs  mod.rs  namespaces.rs  sandbox.rs  snapshots.rs  tasks.rs  transfer.rs  version.rs
apps/ctr/src/included/containerd/types/: mod.rs
apps/ctr/src/included/containerd/v1/: mod.rs
apps/ctr/src/included/google/: protobuf.rs  rpc.rs
apps/hwcli/: Cargo.toml
apps/hwcli/src/: cligen.rs  main.rs
apps/hwgencli/: Cargo.toml  build.rs
apps/hwgencli/src/: main.rs
docs/: Dev.md
examples/: clap_args_demo.rs
protos/: helloworld.proto
protos/containerd/: README.md
tests/helloworld/: Cargo.toml  build.rs
tests/helloworld/hwcli/: cligen.rs  main.rs
tests/helloworld/src/: e2e_tests.rs  lib.rs
tests/hwcodgen/: Cargo.toml  build.rs  helloworld.rs
tests/hwgencli/: Cargo.toml
tests/hwgencli/src/: main.rs
tonic-clap/: Cargo.toml
tonic-clap-build/: Cargo.toml  README.md
tonic-clap-build/src/: code_gen.rs  lib.rs  multi_gen.rs
tonic-clap-macros/: Cargo.toml  README.md
tonic-clap-macros/src/: lib.rs
tonic-clap-tests/: Cargo.toml  build.rs
tonic-clap-tests/ctr/: Cargo.toml  build.rs
tonic-clap-tests/ctr/src/: cmd.rs  main.rs
tonic-clap-tests/helloworld/: build.rs
tonic-clap-tests/helloworld/hwcli/: cligen.rs  main.rs
tonic-clap-tests/helloworld/src/: e2e_tests.rs  ref_tests.rs
tonic-clap-tests/hwgencli/: Cargo.toml  build.rs
tonic-clap-tests/hwgencli/src/: main.rs
tonic-clap-tests/src/: e2e_tests.rs  internal_tests.rs  lib.rs  server.rs
tonic-clap/src/: arg.rs  clap.rs  lib.rs  visit.rs
tonic-clap/src/arg/: autocomplete.rs  mod.rs  openssl.rs
