[workspace]
resolver = "2"
members = [ 
  "tests/helloworld", 
  "tests/hwgencli",
  "tonic-clap-macros",
  "tonic-clap-build"
, "tonic-clap"]

[workspace.dependencies]
prost-build = "0.14"
# proc-macro2 = "1.0"
# quote = "1.0"
tonic-prost-build = "0.14"
tonic-prost = "0.14"
tonic = "0.14"
prost = "0.14"
tokio = {version = "1", features = ["process"]}
tokio-util = "0.7"
clap = { version = "4", features = ["derive"]}
clap_derive = "4"
proc-macro2 = "1"
quote = "1"
syn = "2"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
heck = "0.5"
bevy_reflect = { version = "0.16", default-features = false, features = ["std"] }

# crate in this workspace
tonic-clap-build = { path = "tonic-clap-build" }
tonic-clap-macros = { path = "tonic-clap-macros" }
tonic-clap = { path = "tonic-clap" }
