[workspace]
resolver = "2"
members = [ 
  "tonic-clap-tests/helloworld", 
  "tonic-clap-tests/hwgencli",
  "tonic-clap-macros",
  "tonic-clap-build",
  "tonic-clap"
]
package.edition = "2024"
package.authors = [ "youyuanwu@outlook.com" ]
package.documentation = "https://docs.rs/tonic-clap-build/latest/tonic_clap_build/"
package.repository = "https://github.com/youyuanwu/tonic-clap"
package.license = "MIT"
package.readme = "./README.md"
package.categories = ["web-programming", "network-programming"]
package.keywords = ["gRPC", "tonic", "clap", "cli"]

[workspace.dependencies]
prost-build = "0.14"
tonic-prost-build = "0.14"
tonic-prost = "0.14"
tonic = "0.14"
prost = "0.14"
tokio = {version = "1", features = ["process"]}
tokio-util = "0.7"
clap = { version = "4", features = ["derive"]}
clap_derive = "4"
proc-macro2 = "1"
quote = "1"
syn = "2"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
heck = "0.5"
bevy_reflect = { version = "0.16", default-features = false, features = ["std"] }

# crate in this workspace
tonic-clap-build = { version = "0.2.0", path = "tonic-clap-build" }
tonic-clap-macros = { version = "0.2.0", path = "tonic-clap-macros" }
tonic-clap = { version = "0.2.0", path = "tonic-clap" }
