[package]
name = "tonic-clap-build"
version = "0.2.1"
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

description = "gRPC tonic cli generator build support"
readme = "README.md"

[dependencies]
prost-build.workspace = true
proc-macro2.workspace = true
quote.workspace = true
tonic-prost-build.workspace = true
heck.workspace = true
syn.workspace = true