[package]
name = "tonic-clap-macros"
version = "0.2.0"
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

readme = "README.md"
description = "gRPC tonic cli generator procedural macros."

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace  = true
syn.workspace = true