[package]
name = "tonic-clap"
version = "0.2.0"
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

readme = "../README.md"
description = "gRPC tonic cli generator core implementation."

[dependencies]
bevy_reflect.workspace = true
serde_json.workspace = true
serde.workspace = true
clap.workspace = true
tonic-clap-macros.workspace = true

[dev-dependencies]
prost.workspace = true