[package]
name = "tonic-clap"
version = "0.2.5"
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

readme = "../README.md"
description = "gRPC tonic cli generator core implementation."

[features]
openssl = ["dep:openssl", "dep:tonic-tls"]
autocomplete = ["dep:clap_complete"]

[dependencies]
bevy_reflect.workspace = true
serde_json.workspace = true
serde.workspace = true
clap.workspace = true
clap_complete = {workspace = true, optional = true}
tonic-clap-macros.workspace = true
openssl = { workspace = true, optional = true}
tonic.workspace = true
tonic-tls = { workspace = true, optional = true}
tracing.workspace = true

[dev-dependencies]
prost.workspace = true