[package]
name = "hwcli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic-clap.workspace = true
bevy_reflect.workspace = true
tonic-clap-tests.workspace = true

[build-dependencies]
tonic-clap-build.workspace = true
