[package]
name = "helloworld"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "hwcli"
path = "hwcli/main.rs"

[dependencies]
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
tokio-util.workspace = true
tokio.workspace = true
clap.workspace = true
clap_derive.workspace = true
serde_json.workspace = true
serde.workspace = true
bevy_reflect.workspace = true

tonic-clap.workspace = true

[build-dependencies]
tonic-clap-build.workspace = true