[package]
name = "ctr"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
tonic.workspace = true
prost.workspace = true
tonic-prost.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
bevy_reflect.workspace = true
tonic-clap.workspace = true

[build-dependencies]
tonic-clap-build.workspace = true