[package]
name = "hwgencli"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic-clap.workspace = true
bevy_reflect.workspace = true

[build-dependencies]
tonic-clap-build.workspace = true